# emberline

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  compile_flags.txt  run-linux.sh
src/: main.cpp
